# hm-01

./: README.md  pyproject.toml  pytest.ini  requirements.txt
demo/80_days/: 80_days.txt  README.md  demo.py  setup.py
docs/: mongo-atlas-document-store.md  notes-for-haystack.md
src/mongo_haystack/: __init__.py
src/mongo_haystack/document_stores/: converters.py  filters.py  mongo_atlas.py  test1.py
tests/integration/mongo_haystack/document_stores/: test_filters_int.py  test_mongo_atlas.py  test_mongo_atlas_with_index.py
tests/unit/mongo_haystack/document_stores/: test_filters.py  test_mongo_filters.py
