[tool.poetry]
name = "mongo-haystack"
version = "0.1.0"
description = ""
authors = ["mtwomey <mtwomey@beakstar.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.0"
farm-haystack = "^1.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
roman = "^4.1"
black = "^23.10.1"
datasets = "^2.14.6"
farm-haystack = {extras = ["inference"], version = "^1.21.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
